daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N4_unknown_header_key/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840873b698885641ac340a51e15b2185350cbf4c1f0d95bd9704f3d6ef285dc124b21c532e575e114f89429eee8bc303e21504ee54bcf071f56de37d317f73f1a1e
